<resources>
    <string name="app_name">Agent Banking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_customer">Customer Creation</string>
    <string name="menu_customer_list">Customer List</string>
    <string name="menu_account">Account Opening</string>
    <string name="menu_account_list">Account List</string>
    <string name="menu_transaction">Transaction</string>
    <string name="menu_cash_register">Cash Register</string>
    <string name="menu_business_close">Business: Close</string>
    <string name="test_password">Abc@12345</string>
    <string name="test_username">emroz</string>
    <string name="prompt_email">User name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="activity_login">Login</string>
    <string name="activity_main">Main</string>
    <string name="activity_customer">Customer</string>
    <string name="activity_account">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unit">Unit</string>
    <string name="customer_no">Customer No.</string>
    <string name="customer_type">Customer type</string>
    <string name="account_title">Account Title</string>
    <string name="account_number">Account Number</string>
    <string name="account_no">Account No</string>
    <string name="name">Name</string>
    <string name="source_of_fund">Source of Income</string>
    <string name="entry_date">Entry Date</string>
    <string name="sl_no">Sl No.</string>
    <string name="actions">Actions</string>
    <string name="login_icon">Login Icon</string>
    <string name="total_a_c_opened">Total A/C opened</string>
    <string name="total_deposit">Total Deposit (৳)</string>
    <string name="total_withdraw">Total Withdraw (৳)</string>
    <string name="total_balance">Agent A/C balance (৳)</string>
    <string name="balance">Balance (৳)</string>
    <string name="balance_">Balance</string>
    <string name="action_logout">Logout</string>
    <string name="menu_profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="new_customer">New Customer</string>
    <string name="one">1.</string>
    <string name="two">2.</string>
    <string name="three">3.</string>
    <string name="four">4.</string>
    <string name="five">5.</string>
    <string name="six">6.</string>
    <string name="seven">7.</string>
    <string name="eight">8.</string>
    <string name="thousand">1000</string>
    <string name="five_hundred">500</string>
    <string name="hundred">100</string>
    <string name="fifty">50</string>
    <string name="twenty">20</string>
    <string name="ten">10</string>
    <string name="five_">5</string>
    <string name="two_">2</string>
    <string name="account_information">Account Information</string>
    <string name="others_customer">Others Facilities</string>
    <string name="introducer">Introducer</string>
    <string name="introducer_">Introducer*</string>
    <string name="transaction_profile">Transaction Profile</string>
    <string name="review">Review</string>
    <string name="general_information">General Information</string>
    <string name="personal_information">Personal Information</string>
    <string name="address">Address</string>
    <string name="photo_nid">Photo &amp; NID</string>
    <string name="signature">Signature</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="nominee">Nominee</string>
    <string name="kyc">KYC</string>
    <string name="preview">Preview</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_">Full Name*</string>
    <string name="date_of_birth_">Date of Birth</string>
    <string name="date_of_birth">Date of Birth*</string>
    <string name="mobile_number_">Mobile Number</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="nid_">NID</string>
    <string name="nid">NID*</string>
    <string name="father_name_">Father\'s Name</string>
    <string name="father_name">Father\'s Name*</string>
    <string name="mother_name_">Mother\'s Name</string>
    <string name="mother_name">Mother\'s Name*</string>
    <string name="gender">Gender*</string>
    <string name="country">Country*</string>
    <string name="city">City*</string>
    <string name="attach">Camera</string>
    <string name="clear">CLEAR</string>
    <string name="browse">Gallery</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="type_here">Type here</string>
    <string name="please_attach_your_photograph">Please attach your photograph</string>
    <string name="please_attach_your_nid">Please attach your Documents</string>
    <string name="please_attach_your_signature">Please attach your Signature</string>
    <string name="nid_front">Front side NID</string>
    <string name="nid_back">Back side NID</string>
    <string name="front_image">Front side Image</string>
    <string name="back_image">Back side Image</string>
    <string name="add_new">+Add New</string>
    <string name="search">Search</string>
    <string name="address_type">Address Type*</string>
    <string name="flat_no">Flat No</string>
    <string name="block_no">Block No</string>
    <string name="word_no">Word No</string>
    <string name="post_code">Post Code*</string>
    <string name="district">District*</string>
    <string name="union">Union</string>
    <string name="house_no">House No*</string>
    <string name="village">Village*</string>
    <string name="road_no">Road No</string>
    <string name="zip_code">Zip Code</string>
    <string name="state">State</string>
    <string name="thana">Thana</string>
    <string name="contact_type">Contact Type*</string>
    <string name="contact_no">Contact No*</string>
    <string name="marital_status">Marital Status*</string>
    <string name="religion">Religion*</string>
    <string name="religion_">Religion</string>
    <string name="education">Education*</string>
    <string name="education_">Education</string>
    <string name="nationality_">Nationality</string>
    <string name="nationality">Nationality*</string>
    <string name="vat_registration_no">VAT Registration No</string>
    <string name="monthly_income_">Monthly Income</string>
    <string name="monthly_income">Monthly Income*</string>
    <string name="residential_status">Residential Status</string>
    <string name="spouse_name">Spouse Name</string>
    <string name="number_of_dependents">Number of Dependents</string>
    <string name="occupation_">Occupation</string>
    <string name="occupation">Occupation*</string>
    <string name="birth_certificate_no">Birth Certificate No</string>
    <string name="driving_license">Driving License</string>
    <string name="source_of_fund__">Source of Fund</string>
    <string name="source_of_fund_">Source of Fund*</string>
    <string name="salutation">Salutation</string>
    <string name="documents">Documents</string>
    <string name="submit">Submit</string>
    <string name="risk_grading">Risk Grading</string>
    <string name="type_of_boarding">Type of On-boarding</string>
    <string name="black_listed">Black Listed</string>
    <string name="close_associates_related_pep">Close associates related to PEP</string>
    <string name="type_of_product">Type of Product</string>
    <string name="yearly_transaction_worth">Yearly Transaction Worth</string>
    <string name="resident_statue">Resident Status</string>
    <string name="politically_exposed_person">Politically Exposed Person (PEP)</string>
    <string name="interviewed_personally">Interviewed Personally (IP)</string>
    <string name="profession">Profession</string>
    <string name="transparency_risk">Transparency Risk</string>
    <string name="documents_identification">Documents of Identification</string>
    <string name="document_type">Document Type</string>
    <string name="photocopy_collected">Photocopy Collected</string>
    <string name="verified">Verified</string>
    <string name="related_documents">Related Documents</string>
    <string name="document_type_">Document Type*</string>
    <string name="document_id">Document ID*</string>
    <string name="issue_date">Issue Date*</string>
    <string name="issue_date_">Issue Date</string>
    <string name="expiry_date">Expiry Date*</string>
    <string name="expiry_date_">Expiry Date</string>
    <string name="description">Description</string>
    <string name="related_documents_use">Related Documents Use</string>
    <string name="add_address">Add Address</string>
    <string name="contact">Contact</string>
    <string name="add">Add</string>
    <string name="add_document">Add Document</string>
    <string name="tracing_id">Tracing ID</string>
    <string name="no_content_available">No Contents Available</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="alert">Alert!</string>
    <string name="confirmation_message">Do you want to EXIT?</string>
    <string name="confirmation_message_logout">Do you want to LOGOUT?</string>
    <string name="nominated_person">Nominated Person for Emergency Contact</string>
    <string name="name_">Name*</string>
    <string name="relation">Relation*</string>
    <string name="relation_">Relation</string>
    <string name="address_">Address*</string>
    <string name="guardian_information">Guardian Information</string>
    <string name="guardian_name">Name of Guardian*</string>
    <string name="guardian_name_">Guardian\'s Name</string>
    <string name="contact_number">Contact Number*</string>
    <string name="email_address">Email Address</string>
    <string name="minor_attains_date">Minor Attains Date</string>
    <string name="minor_attains_info">Minor Attains Information</string>
    <string name="edit">EDIT</string>
    <string name="something_wrong">Something went wrong!</string>
    <string name="no_internet">No internet connection</string>
    <string name="left_hand">Left Hand</string>
    <string name="right_hand">Right Hand</string>
    <string name="scan">Scan</string>
    <string name="user_photo">User Photo</string>
    <string name="user_signature">User Signature</string>
    <string name="guardian_photo">Guardian Photo</string>
    <string name="guardian_signature">Guardian Signature</string>
    <string name="product_category_">Product Category*</string>
    <string name="product_category">Product Category</string>
    <string name="operating_instruction_">Operating Instruction*</string>
    <string name="operating_instruction">Operating Instruction</string>
    <string name="title_account_">Title of Account*</string>
    <string name="currency_">Currency*</string>
    <string name="currency">Currency</string>
    <string name="initial_amount">Initial Amount</string>
    <string name="percent_share">Percent of Share</string>
    <string name="not_applicable">N/A</string>
    <string name="amount">Amount (৳)</string>
    <string name="sender_ac">Sender A/C</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="receiver_ac">Receiver A/C</string>
    <string name="receiver_bank">Receiver Bank</string>
    <string name="transaction_no">Transaction No</string>
    <string name="routing">Routing</string>
    <string name="date_time">Date Time</string>
</resources>