<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_customer"
            android:title="@string/menu_customer" />
        <item
            android:id="@+id/nav_customer_list"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_customer_list" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_customer"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_account_list"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_account_list" />

        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_transaction"
            android:title="@string/menu_transaction" />

        <item
            android:id="@+id/nav_business_close"
            android:icon="@drawable/ic_transaction"
            android:title="@string/menu_business_close" />

        <item
            android:id="@+id/nav_cash_register"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_cash_register" />
    </group>
</menu>