<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.datasoft.abs.presenter.view.dashboard.fragments.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.datasoft.abs.presenter.view.dashboard.fragments.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_customer_list"
        android:name="com.datasoft.abs.presenter.view.dashboard.fragments.customerList.CustomerListMainFragment"
        android:label="@string/menu_customer_list"
        tools:layout="@layout/fragment_customer" />

    <activity
        android:id="@+id/nav_customer"
        android:name="com.datasoft.abs.presenter.view.dashboard.fragments.customerCreate.CustomerActivity"
        android:label="@string/menu_customer"
        tools:layout="@layout/activity_customer" />

    <fragment
        android:id="@+id/nav_account_list"
        android:name="com.datasoft.abs.presenter.view.dashboard.fragments.accountList.AccountMainFragment"
        android:label="@string/menu_account_list"
        tools:layout="@layout/fragment_customer" />

    <activity
        android:id="@+id/nav_account"
        android:name="com.datasoft.abs.presenter.view.dashboard.fragments.accountOpening.AccountActivity"
        android:label="@string/menu_account"
        tools:layout="@layout/activity_customer" />

    <fragment
        android:id="@+id/nav_transaction"
        android:name="com.datasoft.abs.presenter.view.dashboard.fragments.transaction.TransactionFragment"
        android:label="@string/menu_transaction"
        tools:layout="@layout/fragment_transaction" />
</navigation>