<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/space_5x">

    <TextView
        android:id="@+id/txt_view_sl_no"
        android:layout_width="@dimen/space_100x"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_8x"
        android:layout_marginEnd="@dimen/space_5x"
        android:fontFamily="@font/oxygen_regular"
        android:text="@string/sl_no"
        android:textColor="@color/customer_text"
        android:textSize="@dimen/font_12x"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_view_sender_ac"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_view_sender_ac"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_5x"
        android:fontFamily="@font/oxygen_regular"
        android:text="@string/sender_ac"
        android:textColor="@color/customer_text"
        android:textSize="@dimen/font_12x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_view_receiver_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_view_sl_no"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_view_receiver_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_5x"
        android:fontFamily="@font/oxygen_regular"
        android:gravity="center"
        android:text="@string/receiver_name"
        android:textColor="@color/customer_text"
        android:textSize="@dimen/font_12x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_view_receiver_ac"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_view_sender_ac"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_view_receiver_ac"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_5x"
        android:fontFamily="@font/oxygen_regular"
        android:gravity="center"
        android:text="@string/receiver_ac"
        android:textColor="@color/customer_text"
        android:textSize="@dimen/font_12x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_view_receiver_bank"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_view_receiver_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_view_receiver_bank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_5x"
        android:fontFamily="@font/oxygen_regular"
        android:gravity="center"
        android:text="@string/receiver_bank"
        android:textColor="@color/customer_text"
        android:textSize="@dimen/font_12x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_view_routing"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_view_receiver_ac"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_view_routing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_5x"
        android:fontFamily="@font/oxygen_regular"
        android:text="@string/routing"
        android:textColor="@color/customer_text"
        android:textSize="@dimen/font_12x"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_view_amount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_view_receiver_bank"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_view_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_5x"
        android:fontFamily="@font/oxygen_regular"
        android:text="@string/amount"
        android:textColor="@color/customer_text"
        android:textSize="@dimen/font_12x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_view_entry_date"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_view_routing"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_view_entry_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oxygen_regular"
        android:text="@string/entry_date"
        android:textColor="@color/customer_text"
        android:textSize="@dimen/font_12x"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_view_amount"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/img_view_edit"
        android:layout_width="@dimen/space_48x"
        android:layout_height="@dimen/space_48x"
        android:contentDescription="@string/todo"
        android:padding="@dimen/space_8x"
        android:src="@drawable/ic_baseline_preview_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.90"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>