<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/space_8x">

    <TextView
        android:id="@+id/txt_view_nominee_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8x"
        android:fontFamily="@font/oxygen_regular"
        android:maxLines="1"
        android:text="@string/name"
        android:textSize="@dimen/font_12x"
        app:layout_constraintEnd_toStartOf="@+id/txt_view_nominee_relation"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_view_nominee_relation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_8x"
        android:layout_marginTop="@dimen/space_8x"
        android:layout_marginEnd="@dimen/space_8x"
        android:fontFamily="@font/oxygen_regular"
        android:text="@string/relation_"
        android:textSize="@dimen/font_12x"
        app:layout_constraintEnd_toStartOf="@+id/txt_view_nominee_share"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_view_nominee_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_view_nominee_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8x"
        android:layout_marginEnd="@dimen/space_8x"
        android:fontFamily="@font/oxygen_regular"
        android:text="@string/percent_share"
        android:textSize="@dimen/font_12x"
        app:layout_constraintEnd_toStartOf="@+id/txt_view_nominee_guardian"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_view_nominee_relation"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_view_nominee_guardian"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8x"
        android:fontFamily="@font/oxygen_regular"
        android:maxLines="1"
        android:text="@string/not_applicable"
        android:textSize="@dimen/font_12x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_view_nominee_share"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>