<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/space_5x">

    <TextView
        android:id="@+id/txt_view_unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_5x"
        android:fontFamily="@font/oxygen_regular"
        android:paddingTop="@dimen/space_5x"
        android:paddingBottom="@dimen/space_5x"
        android:text="@string/unit"
        android:textColor="@color/customer_text"
        android:textSize="@dimen/font_20x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_view_entry_date"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_view_customer_type"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_view_customer_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_5x"
        android:fontFamily="@font/oxygen_regular"
        android:paddingTop="@dimen/space_5x"
        android:paddingBottom="@dimen/space_5x"
        android:text="@string/customer_no"
        android:textColor="@color/customer_text"
        android:textSize="@dimen/font_20x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_view_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_view_sl_no"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_view_customer_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_5x"
        android:fontFamily="@font/oxygen_regular"
        android:paddingTop="@dimen/space_5x"
        android:paddingBottom="@dimen/space_5x"
        android:text="@string/customer_type"
        android:textColor="@color/customer_text"
        android:textSize="@dimen/font_20x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_view_unit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_view_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_view_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_5x"
        android:fontFamily="@font/oxygen_regular"
        android:paddingTop="@dimen/space_5x"
        android:paddingBottom="@dimen/space_5x"
        android:text="@string/name"
        android:textColor="@color/customer_text"
        android:textSize="@dimen/font_20x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_view_customer_type"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_view_customer_no"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_view_entry_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oxygen_regular"
        android:paddingTop="@dimen/space_5x"
        android:paddingBottom="@dimen/space_5x"
        android:text="@string/entry_date"
        android:textColor="@color/customer_text"
        android:textSize="@dimen/font_20x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_view_unit"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_view_sl_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_5x"
        android:layout_marginEnd="@dimen/space_5x"
        android:fontFamily="@font/oxygen_regular"
        android:paddingTop="@dimen/space_5x"
        android:paddingBottom="@dimen/space_5x"
        android:text="@string/sl_no"
        android:textColor="@color/customer_text"
        android:textSize="@dimen/font_20x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_view_customer_no"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>